src/App.css
/*UNIVERSALS*/

.App {
  text-align: center;
  width: 100%;
}


body, html {
  scroll-behavior: smooth;
  margin: 0;
  font-family: "Courier New" !important;
  /* font-family: "Verdana" !important; */
  background-color: #f3d87e !important;
}

/*BANNER/NAVBAR*/

.sunBanner {
  overflow: hidden;
  background-color: black;
  position: fixed;
  top: 0%;
  left: 0%;
  width: 100%;
  height: 12%;
  z-index: 2;
  display: inline-block;
}

.sunBanner img {
  position: absolute;
  transform: translateX(-50%);
  vertical-align: middle;
  height: 100%; 
  
}

.sunBanner p {
  position: absolute;
  color: grey;
  margin: 3px;
  /* display: inline-block; */
  right: 0%;
  bottom: 0%;
  font-size: small;
}

.sunBanner #nav {
  position: absolute;
  height: 100%;
}

.sunBanner a {
  float: left;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  padding: 0px 20px 0px 20px;
  text-decoration: none !important;
  font-size: x-large;
  height: 100%;
  transition: .2s;
  -webkit-transition: .2s;
}

.sunBanner a:hover {
  color: black;
  background-color: rgb(231, 172, 44);
  transition: .2s;
  -webkit-transition: .2s;
}

.sunBanner #dropdown {
  background-color: black;
  height: 100%;
  float: left;
  display: none;
}

.sunBanner #dropdown button {
  background-color: black;
  border: none;
  height: 100%;
  width: 100%;
  font-size: 100%;
}

/*PAGES*/

#section1, #section2, #section3 {
  display: block;
  width: 96%;
  height: 85vh;
  margin-left: 2%;
  margin-bottom: 2%; 
  box-shadow: 0px 5px 5px grey;
  border-radius: 5px;
  overflow: hidden;
}

#section1 {
  margin-top: 6%;
  animation: fadein 1s;
}

.section-jumps {
  top: 0%;
  position: absolute;
  /* display: none; */
}

.section-jumps p {
  position: relative;
  height: 87vh;
}

.page {
  display: block;
}

 /*EXPERIENCE PAGE*/

#experience{
 text-align: left;
 overflow-x: auto;
 position: relative;
 width: 25%;
 height: 100%;
 /* height: 86vh; */
 display: inline-block;
 font-size: larg;
 border-right: 2px solid black;
}

#experience:last-child {
  border-right: none;
}

#experience h6, #experience h5, #experience h4, #experience h3, #experience h2 {
  margin-top: 6%;
  margin-left: 3%;
  text-decoration: underline;
}

#experience p {
  margin-left: 3%;
}

#experience h2 {
  font-weight: bold;
} 


#experience:nth-child(odd) {
  background-color: white;
  
}

#experience:nth-child(even) {
  background-color: rgb(235, 232, 232);
  
}




.school-icon {
  display: inline-block;
}

.school-icon img {
  /* display: inline-block; */
  width: 25%;
  margin-left: 4%;
  float: left;
}

.school-icon ul {
  margin-top: 5%;
  display: inline-block;
  font-size: small;
  padding-left: 10px;
  list-style: none;
}

.school-icon li {
  font-size: initial;
  line-height: 1.8;
  list-style: circle black;
}

#ncapda, #CVS {
  width: 40%;
  margin-left: 5%;
  margin-bottom: 2%;
  padding: 1%;
  box-shadow: 0px 5px 5px grey;

}

/*ABOUT PAGE*/

#me {
  background-color: white !important;
  border-right: 2px solid black;
}

#me img {
  max-width: 35%;
  max-height: 35%;
  margin-top: 7%;
  margin-bottom: 1%;
  border-radius: 50%;
  box-shadow: 5px 5px 5px grey;
}
#me p {
  width: 100%;
  padding: 3%;
  text-align: left;
  font-size: large;
}

#me, #info {
 overflow-x: auto;
 position: relative;
 width: 50%;
 height: inherit;
 display: inline-block;
 background-color: rgb(235, 232, 232);

}

#info ul {
  /* font-weight: bold; */
  padding-top: 7%;
  font-size: xx-large;
  text-align: left;
  
  
}

#info li {
  padding-bottom: 5%;
  padding-left: 2%;
  list-style: none;
}

/*PROJECTS PAGE*/

.project, .project-cont {
  position: relative;
  width: 50%;
  height: 100%;
  display: inline-block;
  overflow-x: hidden;
}

.project {
  background-color: white;
  border-right: 2px solid black;
}

.project-cont {
  background-color: rgb(235, 232, 232);
}

#pager-nav {
  position: absolute;
  color: white;
  z-index: 1;
  left: 43%;
  width: 14%;
  font-size: xx-large;
  background-color: black;
  border: 2px solid black;
  border-radius: 0px 0px 7px 7px;
  overflow: hidden;
  text-decoration: underline;
}

#pager-nav button {
  color: white;
  background-color: unset;
  border: unset;
  transition: .2s;
}

#pager-nav button:hover {
  color: black;
  background-color: rgb(231, 172, 44);
  transition: .2s;
}

#pager-nav button:nth-child(1) {
  float: left;
}

#pager-nav button:nth-child(2) {
  float: right;
}

.project img, .project-cont img {
  max-width: 45%;
  max-height: 45%;
  margin-top: 13%;
  margin-bottom: 1%;
  box-shadow: 5px 5px 5px grey;
}

.project p, .project-cont p {
  width: 100%;
  padding: 3%;
  text-align: left;
  font-size: larger;
}

.project-cont p:nth-child(1) {
  margin-top: 9%;
}

.project-cont p {
  margin-top: 1%;
  font-size: x-large;
}

/*SMALL VIEWPORT VIEW*/

@media only screen and (max-width: 900px) {
  #me, #info, #experience, .project, .project-cont {
    width: 100%;
    display: block;
  }
  #section1 {
    margin-top: 12%;
  }
  #me, #info {
    font-size: x-large !important;
  }
  #me, #experience, #project {
    border: none;
    border-bottom: 2px black solid;
  }
  #info ul {
    font-size: large !important;
    padding-left: 0%;
  }
  #section1, #section2, #section3 {
    
    height: auto !important;
  }
  #experience:last-child {
    border: none;
  }
  .sunBanner #nav {
    width: 100%;
    height: 50%;
    bottom: 0;
  }
  .sunBanner a {
    /* display: none; */
    width: 33.33%;
    font-size: unset;
    margin: auto;
    display: inline-block;
    padding: 0;
    align-items: unset;
    bottom: 0;
  }
  .sunBanner img{
    height: 50%;
    top: 0;
  }
  .sunBanner p {
    display: none;
  }
  .section-jumps p {
    height: 174vh
  }
  #pager-nav {
    width: 80%;
    left: 10%;
    
  }
  #pager-nav button {
    width: 30%;
  }
  .project {
    border: none;
    border-bottom: 2px solid black;
  }
  .project p{
    font-size: large;
  }
  .project-cont p{
    font-size: unset;
    margin: 0;
    padding-top: 2%;
  }
  .project img {
    margin-top: 16%;
  }
}





@keyframes fadein{
  from {opacity: 0%;}
  to {opacity: 100%;}
}

